# micco-v3

./: .gitignore  CLAUDE.md  LICENSE  QTKD 1.159 2021 ND FINAL.docx  README.md  benchmark_report.md
micco-backend/backend/: alembic.ini  eval_report.json  eval_retrieval.py  migrate_docs.py  pyproject.toml  requirements.txt  screenlog.0  seed_data.py  seed_users.py  start_server.bat  test_upload.py
micco-backend/backend/alembic/: env.py
micco-backend/backend/alembic/versions/: 002_add_rls_policies.py  003_add_document_versions.py  004_add_document_fields.py  4e0e78c4110d_initial_schema.py
micco-backend/backend/app/: main.py
micco-backend/backend/app/api/: chat_agent.py  chat_prompt.py  documents.py  expert.py  rag.py  router.py  workspaces.py
micco-backend/backend/app/api_compat/: __init__.py  admin.py  approvals.py  auth.py  chat.py  dashboard.py  documents.py  knowledge.py  utils.py
micco-backend/backend/app/core/: config.py  rls.py  security.py
micco-backend/backend/app/models/: __init__.py  chat_message.py  department.py  document.py  document_version.py  knowledge_base.py  knowledge_entry.py  system_chat_log.py  user.py
micco-backend/backend/app/schemas/: compat.py  document.py  rag.py  workspace.py
micco-backend/backend/app/services/: deep_retriever.py  document_loader.py  embedder.py  expert_recommendation.py  knowledge_graph_service.py  logging_service.py  nexus_rag_service.py  reranker.py
micco-backend/backend/app/services/document_parser/: __init__.py  base.py  docling_parser.py  (+1 more)
micco-backend/backend/tests/unit/: test_expert_recommendation.py
(+77 files in other folders)
